package com.example.traviling.Add;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.example.traviling.R;
public class DetailsActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.home_page);
    }
}
