package com.example.traviling;

import android.view.View;

import androidx.fragment.app.Fragment;

public class introFragment extends Fragment {
    public void gotoLoginFragment(View view) {
        // Your code here
    }
}
